Remove maxPermSize and enable debug by default (but don't suspend unless -d)